--- a/index.html
+++ b/index.html
@@ -2,11 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Hello Vue</title>
+    <title>My Wallet</title>
+
+    <!-- imports -->
     <link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+
+    <!-- style -->
+    <link rel="stylesheet" type="text/css" href="public/css/style.css">
   </head>
   <body>
     <div id="app"></div>      
     <script src="build/build.js"></script>
+
+    <!-- imports -->
+    <script src="public/js/jquery.1.12.4.min.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   </body>
 </html>
